# queimadas_inpe_bi

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: 1_entendimento_negocio.md  2_entendimento_dados.md  index.md
notebooks/: 02_eda_focos.ipynb
queimadas_inpe/: __init__.py  dataset.py  features.py  plots.py
queimadas_inpe/data/: ingest.py
queimadas_inpe/modeling/: predict.py  train.py
