[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "queimadas_inpe"
version = "0.0.1"
description = "Coleta, tratamento, an\u00e1lise e visualiza\u00e7\u00e3o estrat\u00e9gica de dados de queimadas do INPE."
authors = [
  { name = "Grupo FIAP - Global Solution" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "duckdb>=1.5.3",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest",
    "python-dotenv",
    "requests>=2.34.2",
    "ruff",
    "scikit-learn",
    "shapely>=2.1.2",
    "streamlit>=1.58.0",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["queimadas_inpe"]
include = ["pyproject.toml", "queimadas_inpe/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["queimadas_inpe"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.8",
    "pytest>=9.0.3",
]

